# Breakout_game

./: .readme.md.swp  BreakOut  CMakeLists.txt  main.cpp  readme.md
config/: CMakeLists.txt  config_settings.txt  game_settings.h  greeting.txt  help.txt  restart.txt
headers/: CMakeLists.txt  ball.h  config_loader.h  displayable.h  drawer.h  game.h  paddle.h  rectangle.h  test_helper.h  texts.h
src/: CMakeLists.txt  ball.cpp  config_loader.cpp  displayable.cpp  drawer.cpp  game.cpp  paddle.cpp  rectangle.cpp  test_helper.cpp  texts.cpp
tests/: CMakeLists.txt  google_greeting_tests.cpp  keyboard_simulator.cpp
